# expynder

./: .pre-commit-config.yaml  expynder.py  pyproject.toml  readme.md  test_expynder.py
expynder/: __init__.py  expynder.py  monad.py  remember.py
tests/: test_expynder.py
