[tool.poetry]
name = "expynder"
version = "0.1.0"
description = "A python package for parameter studies."
authors = ["Paul Reiter <reiter.paul@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pre-commit = "^2.11.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
