[tool.poetry]
name = "expynder"
version = "0.0.0"
description = "A python package for parameter studies."
authors = ["Paul Reiter <reiter.paul@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pre-commit = "^2.11.1"
black = "^20.8b1"
pytest-cov = "^2.11.1"
pylint = "^2.7.4"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["expynder/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
